# game-engine

./: .gitignore  .travis.yml  CMakeLists.txt  GameEngine.sln  README.md
game-engine/: CMakeLists.txt
game-engine.macOS/: CMakeLists.txt
game-engine/include/: CMakeLists.txt
game-engine/include/Core/Modules/Graphics/: Graphics.h
game-engine/include/game-engine/: Animatable.h  CMakeLists.txt  GameObject.h  JMPImporter.h  JointEntity.h  Object.h
game-engine/include/game-engine/Core/: CMakeLists.txt
game-engine/include/game-engine/Core/Device/: CMakeLists.txt  CameraCapture-iOS.h  CameraCapture.h  GLContext.h  Gyroscope.h  System.h
game-engine/include/game-engine/Core/Dispatch/: CMakeLists.txt  DispatchQueue.h  Task.h
game-engine/include/game-engine/Core/Engine/: CMakeLists.txt  Engine.h
game-engine/include/game-engine/Core/Entity/: CMakeLists.txt  ENode.h
game-engine/include/game-engine/Core/GL/: CMakeLists.txt  GL.h  GLContext-iOS.h  GLContext.h  GLData.h  GLSharegroup-iOS.h  GLSharegroup.h  GLTexture.h  GLThread.h
game-engine/include/game-engine/Core/Main/: CMakeLists.txt  CoreModule.h  Engine.h  Entity.h  EntityImporter.h  Property.h  PropertyImporter.h
game-engine/include/game-engine/Core/Modules/: CMakeLists.txt  CoreModule.h
game-engine/include/game-engine/Core/Scene/: CMakeLists.txt  Scene.h  SceneManager.h
game-engine/include/game-engine/Core/Utilities/: CMakeLists.txt  DispatchQueue.h  StringUtil.h  TextureUtil.h  Thread.h  TimeUtil.h
game-engine/include/game-engine/Defines/: CMakeLists.txt  CameraCapture.h  OpenGL.h
game-engine/include/game-engine/Device/: CMakeLists.txt  CameraCapture.h  Gyroscope-iOS.h  Gyroscope.h  System.h
game-engine/include/game-engine/Entity/: CMakeLists.txt  Entity.h  EntityImporter.h  EntityObserver.h  Property.h  PropertyImporter.h
game-engine/include/game-engine/Modules/: CMakeLists.txt  CoreModule.h
game-engine/include/game-engine/Modules/AI/: AI.h  AIDT.h  AIFSM.h  AIFSMState.h  CMakeLists.txt
game-engine/include/game-engine/Modules/AR/: AR.h  AREntity.h  ARTracker.h  CMakeLists.txt  shader.vert
game-engine/include/game-engine/Modules/Animation/: Animation.h  AnimationController.h  AnimationImporter.h  AnimationModule.h  AnimatorProperty.h  CMakeLists.txt  JointAnimation.h  JointEntity.h  JointTransform.h  KeyFrame.h
game-engine/include/game-engine/Modules/Audio/: Audio.h  CMakeLists.txt
game-engine/include/game-engine/Modules/GUI/: CMakeLists.txt  GUI.h  GUIAnalog.h  GUICircle.h  GUIProgressBar.h  GUIProperty.h  GUIRectangle.h  GUIShape.h
game-engine/include/game-engine/Modules/Graphics/: AnimatableMeshProperty.h  CMakeLists.txt  CameraEntity.h  DirectionalLightEntity.h  DirectionalLightProperty.h  Geometry.h  GeometryEntity.h  Graphics.h  GraphicsRead.h  LightEntity.h  LightProperty.h  Material.h  MaterialImporter.h  Mesh.h  MeshImporter.h  MeshProperty.h  PointLightEntity.h  PointLightProperty.h  Shader.h  Vertex.h
game-engine/include/game-engine/Modules/Physics/: CMakeLists.txt  Physics.h  PhysicsProperty.h  PhysicsShape.h  (+1 more)
game-engine/include/game-engine/Peripherals/: CMakeLists.txt  Camera.h  CameraAbstract.h  CameraAbstractFactory.h  CameraCapture.h  CameraIOSFactory.h  Gyroscope-iOS.h
game-engine/include/game-engine/Scene/: CMakeLists.txt  Scene.h  SceneLogic.h  SceneManager.h
game-engine/include/game-engine/Util/: CMakeLists.txt  StringUtil.h  TextureUtil.h  TimeUtil.h
game-engine/src/: Animatable.cpp  CMakeLists.txt
game-engine/src/Core/: CMakeLists.txt
game-engine/src/Core/Device/: CMakeLists.txt  CameraCapture-iOS.mm  CameraCapture.cpp  GLContext-iOS.mm  GLContext.cpp  Gyroscope-iOS.mm  Gyroscope.cpp  System.cpp
game-engine/src/Core/Dispatch/: CMakeLists.txt  DispatchQueue.cpp  Thread.cpp
game-engine/src/Core/Engine/: CMakeLists.txt  Engine.cpp  System.cpp
game-engine/src/Core/Entity/: CMakeLists.txt  ENode.cpp
game-engine/src/Core/GL/: CMakeLists.txt  GLContext-iOS.mm  GLContext.cpp  GLSharegroup-iOS.mm  GLTexture.cpp
game-engine/src/Core/Main/: CMakeLists.txt  CoreModule.cpp  Engine.cpp  Entity.cpp  EntityImporter.cpp  Property.cpp  PropertyImporter.cpp  Scene.cpp  SceneManager.cpp
game-engine/src/Core/Modules/: CMakeLists.txt  CoreModule.cpp
game-engine/src/Core/Scene/: CMakeLists.txt  Scene.cpp  SceneManager.cpp
game-engine/src/Core/Utilities/: CMakeLists.txt  DispatchQueue.cpp  TextureUtil.cpp  Thread.cpp
game-engine/src/Device/: CMakeLists.txt  CameraCapture-iOS.mm  CameraCapture.cpp  Gyroscope-iOS.mm  Gyroscope.cpp  System.cpp
game-engine/src/Entity/: CMakeLists.txt  Entity.cpp  EntityImporter.cpp  Property.cpp  PropertyImporter.cpp
game-engine/src/Modules/: CMakeLists.txt  CoreModule.cpp
game-engine/src/Modules/AI/: AI.cpp  AIFSM.cpp  CMakeLists.txt
game-engine/src/Modules/AR/: AR.cpp  AREntity.cpp  ARTracker.cpp  CMakeLists.txt
game-engine/src/Modules/Animation/: Animation.cpp  AnimationController.cpp  AnimationImporter.cpp  AnimationModule.cpp  AnimatorProperty.cpp  CMakeLists.txt  JointAnimation.cpp  JointEntity.cpp  JointTransform.cpp  KeyFrame.cpp
game-engine/src/Modules/Audio/: Audio.cpp  CMakeLists.txt
game-engine/src/Modules/GUI/: CMakeLists.txt  GUI.cpp  GUIAnalog.cpp  GUICircle.cpp  GUIProgressBar.cpp  GUIProperty.cpp  GUIRectangle.cpp  GUIShape.cpp
game-engine/src/Modules/Graphics/: AnimatableMeshProperty.cpp  CMakeLists.txt  CameraEntity.cpp  DirectionalLightEntity.cpp  DirectionalLightProperty.cpp  Geometry.cpp  GeometryEntity.cpp  Graphics.cpp  GraphicsRead.cpp  LightEntity.cpp  LightProperty.cpp  Material.cpp  MaterialImporter.cpp  Mesh.cpp  MeshImporter.cpp  MeshProperty.cpp  PointLightEntity.cpp  PointLightProperty.cpp  Shader.cpp
game-engine/src/Modules/Physics/: CMakeLists.txt  Physics.cpp  PhysicsProperty.cpp  PhysicsShape.cpp  PhysicsSphere.cpp
game-engine/src/Peripherals/: CMakeLists.txt  Camera.cpp  CameraCapture-iOS.mm  CameraCapture.cpp  Gyroscope-iOS.mm  Gyroscope.cpp  System.cpp
game-engine/src/Scene/: CMakeLists.txt  Scene.cpp  SceneManager.cpp
game-engine/src/Util/: CMakeLists.txt  TextureUtil.cpp
(+69 files in other folders)
